--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,4 +23,12 @@
 	.btn {
 		@apply bg-primary text-sm md:text-base text-white rounded-5xl uppercase font-bold py-6 px-10 transition-all duration-300 hover:scale-95 hover:bg-neutral;
 	}
+
+	.input {
+		@apply w-full mt-4 py-4 px-6 border border-neutral transition-all duration-300 focus:border-primary outline-none rounded-2xl;
+	}
+
+	.input-error {
+		@apply w-full text-red-500 text-sm ml-2 capitalize;
+	}
 }
