--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@
 @layer base {
 	html {
 		@apply scroll-smooth;
+		--scroll-behavior: smooth !important;
+		scroll-behavior: smooth !important;
 	}
 
 	body {
